PR comments part 2